--- a/DriveSafe/Base.lproj/Main.storyboard
+++ b/DriveSafe/Base.lproj/Main.storyboard
@@ -26,21 +26,49 @@
                                 <rect key="frame" x="67" y="213" width="240" height="240"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 mph" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvv-E2-FK3" userLabel="CurrentSpeed">
-                                <rect key="frame" x="117" y="303" width="142" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.15920090752178626" green="0.71622771787782646" blue="0.80724520484615381" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="115.5" y="300.5" width="144" height="65"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kva-pR-rKi">
+                                <rect key="frame" x="0.0" y="20" width="375" height="79"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuWhite" translatesAutoresizingMaskIntoConstraints="NO" id="jJc-By-Rw0">
+                                        <rect key="frame" x="317" y="20" width="40" height="39"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drivesafe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc3-qe-kEB">
+                                        <rect key="frame" x="140.5" y="29" width="94.5" height="21"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="22"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.081980579254831779" green="0.38790353110516357" blue="0.43719312142307687" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Yc3-qe-kEB" firstAttribute="centerX" secondItem="Kva-pR-rKi" secondAttribute="centerX" id="0QT-zZ-XC3"/>
+                                    <constraint firstItem="jJc-By-Rw0" firstAttribute="leading" secondItem="Kva-pR-rKi" secondAttribute="leading" constant="317" id="3ed-Lq-m9x"/>
+                                    <constraint firstAttribute="bottom" secondItem="jJc-By-Rw0" secondAttribute="bottom" constant="20" id="GBv-NI-XK4"/>
+                                    <constraint firstAttribute="bottom" secondItem="Yc3-qe-kEB" secondAttribute="bottom" constant="29" id="LAk-Dp-87d"/>
+                                    <constraint firstItem="jJc-By-Rw0" firstAttribute="top" secondItem="Kva-pR-rKi" secondAttribute="top" constant="20" id="LTN-4W-JlK"/>
+                                    <constraint firstAttribute="height" constant="79" id="j09-gv-j5d"/>
+                                    <constraint firstAttribute="trailing" secondItem="jJc-By-Rw0" secondAttribute="trailing" constant="18" id="nt8-iI-xYl"/>
+                                    <constraint firstItem="Yc3-qe-kEB" firstAttribute="top" secondItem="Kva-pR-rKi" secondAttribute="top" constant="29" id="sCV-V7-hBA"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Jvv-E2-FK3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0xN-AR-Wyl"/>
+                            <constraint firstItem="Kva-pR-rKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1of-Q5-tWj"/>
+                            <constraint firstAttribute="trailing" secondItem="Kva-pR-rKi" secondAttribute="trailing" id="Dc9-Zg-zwu"/>
                             <constraint firstItem="SIi-1z-opw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="193" id="IgB-2h-h4I"/>
                             <constraint firstItem="SIi-1z-opw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="MPV-6W-UP7"/>
                             <constraint firstItem="SIi-1z-opw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="am5-jF-VAd"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="SIi-1z-opw" secondAttribute="bottom" constant="214" id="cIN-8o-fwI"/>
                             <constraint firstItem="Jvv-E2-FK3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g28-SC-enw"/>
                             <constraint firstItem="SIi-1z-opw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rDa-uC-c00"/>
+                            <constraint firstItem="Kva-pR-rKi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="tvU-tJ-bMS"/>
                         </constraints>
                     </view>
                     <connections>
@@ -53,4 +81,7 @@
             <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MenuWhite" width="32" height="32"/>
+    </resources>
 </document>
